# cadmium

./: .codecov.yml  .gitignore  .gitmodules  .project  .travis.yml  BSD-LICENSE.txt  CMakeLists.txt  Dockerfile  Jamroot.jam  Makefile  README.md  Steps_to_install.txt  cadmium.cmake.in  configure
.github/workflows/: cmake.yml
example/: Jamfile.jam  main-clock.cpp  main-count-fives.cpp
example/pdevs/: main-clock.cpp
include/: cadmium.h
test/: Jamfile.jam  boxes_cleanup_test.cpp  celldevs_delay_test.cpp  celldevs_grid_utils_test.cpp  devs_accumulator_model_test.cpp  devs_generator_model_test.cpp  devs_passive_model_test.cpp  inbox_cleanup_test.cpp  logger_test.cpp  pdevs_accumulator2_model_test.cpp  pdevs_accumulator_model_test.cpp  pdevs_basic_models_test.cpp  pdevs_boxes_cleanup_test.cpp  pdevs_coordinator_test.cpp  pdevs_coupling_test.cpp  pdevs_dynamic_atomic_helpers_test.cpp  pdevs_dynamic_atomic_test.cpp  pdevs_dynamic_coordinator_test.cpp  pdevs_dynamic_engine_helpers_test.cpp  pdevs_dynamic_model_helpers_test.cpp  pdevs_dynamic_model_test.cpp  pdevs_dynamic_runner_test.cpp  pdevs_dynamic_simulator_test.cpp  pdevs_engine_helper_test.cpp  pdevs_generator_model_test.cpp  pdevs_input_stream_test.cpp  pdevs_partial_accumulator_model_test.cpp  pdevs_passive_model_test.cpp  pdevs_receiver_model_test.cpp  pdevs_runner_test.cpp  pdevs_sender_model_test.cpp  pdevs_simulator_test.cpp  pdevs_subnet_model_test.cpp  tuple_to_ostream_test.cpp
test-compile/: Jamfile.jam  coordinator_of_coupled_of_atomics_test.cpp  coordinator_of_coupled_of_mixed_models_test.cpp  coordinator_of_empty_coupled_model_test.cpp  coupled_of_all_atomics_test.cpp  coupled_of_atomic_coupled_IC_test.cpp  coupled_of_atomic_coupled_atomic_IC_test.cpp  coupled_of_atomic_coupled_atomic_IC_test_NO_COMPILING.cpp  coupled_of_atomic_models.hpp  coupled_of_mixed_models.hpp  coupled_of_mixed_models_test.cpp  empty_coupled_model.hpp  empty_coupled_model_is_a_valid_model_test.cpp  failure_to_map_types_in_EOC_fails_compile_test.cpp  failure_to_map_types_in_IC_fails_compile_test.cpp  inports_not_a_tuple_fail_compile.cpp  missing_atomic_model_simulator_fails_compile_test.cpp  missing_confluence_transition_fails_compile_test.cpp  missing_external_transition_fails_compile_test.cpp  missing_input_ports_fails_compile_test.cpp  missing_internal_transition_fails_compile_test.cpp  missing_output_function_fails_compile_test.cpp  missing_output_ports_fails_compile_test.cpp  missing_state_type_fails_compile_test.cpp  missing_state_variable_fails_compile_test.cpp  missing_time_advance_function_fails_compile_test.cpp  outports_not_a_tuple_fail_compile.cpp  outports_not_a_tuple_in_atomic_model_fail_compile_test.cpp  repeated_input_ports_fail_compile_test.cpp  repeated_output_ports_fail_compile_test.cpp  simulator_provide_types_test.cpp  valid_atomic_check_test.cpp  valid_atomic_with_multiple_ports_check_test.cpp
test-compile/compile-fails/: Jamfile.jam  coordinator_of_no_coupled_fails_compile_test.cpp  devs_inports_not_a_tuple_in_atomic_model_fail_compile_test.cpp  devs_missing_external_transition_fails_compile_test.cpp  devs_missing_input_ports_in_atomic_fails_compile_test.cpp  devs_missing_internal_transition_fails_compile_test.cpp  devs_missing_output_function_fails_compile_test.cpp  devs_missing_output_ports_fails_compile_test.cpp  devs_missing_state_type_fails_compile_test.cpp  devs_missing_state_variable_fails_compile_test.cpp  devs_missing_time_advance_function_fails_compile_test.cpp  devs_outports_not_a_tuple_in_atomic_model_fail_compile_test.cpp  devs_repeated_input_ports_fail_compile_test.cpp  devs_repeated_output_ports_fail_compile_test.cpp  failure_to_map_types_in_EIC_fails_compile_test.cpp  inports_not_a_tuple_in_atomic_model_fail_compile_test.cpp  inports_not_a_tuple_in_coupled_model_fail_compile_test.cpp  missing_output_function_fails_compile_test.cpp  missing_output_ports_fails_compile_test.cpp  missing_state_type_fails_compile_test.cpp  missing_time_advance_function_fails_compile_test.cpp  pdevs_failure_to_map_types_in_EIC_fails_compile_test.cpp  pdevs_failure_to_map_types_in_EOC_fails_compile_test.cpp  pdevs_failure_to_map_types_in_IC_fails_compile_test.cpp  pdevs_inports_not_a_tuple_in_atomic_model_fail_compile_test.cpp  pdevs_missing_atomic_model_simulator_fails_compile_test.cpp  pdevs_missing_confluence_transition_fails_compile_test.cpp  pdevs_missing_external_transition_fails_compile_test.cpp  pdevs_missing_input_ports_fails_compile_test.cpp  pdevs_missing_input_ports_in_atomic_fails_compile_test.cpp  pdevs_missing_internal_transition_fails_compile_test.cpp  pdevs_missing_output_function_fails_compile_test.cpp  pdevs_missing_output_ports_fails_compile_test.cpp  pdevs_missing_state_type_fails_compile_test.cpp  pdevs_missing_state_variable_fails_compile_test.cpp  pdevs_missing_time_advance_function_fails_compile_test.cpp  pdevs_outports_not_a_tuple_in_atomic_model_fail_compile_test.cpp  pdevs_outports_not_a_tuple_in_coupled_model_fail_compile_test.cpp  pdevs_repeated_input_ports_fail_compile_test.cpp  pdevs_repeated_output_ports_fail_compile_test.cpp  (+3 more)
test-compile/compiles/: Jamfile.jam  coordinator_of_coupled_of_atomics_test.cpp  coupled_of_all_atomics_test.cpp  coupled_of_all_coupleds_test.cpp  coupled_of_mixed_models_test.cpp  devs_generator_atomic_check_test.cpp  devs_passive_atomic_check_test.cpp  generator_atomic_check_test.cpp  passive_atomic_check_test.cpp  pdevs_coordinator_of_coupled_of_atomics_test.cpp  pdevs_coordinator_of_coupled_of_mixed_models_test.cpp  pdevs_coordinator_of_empty_coupled_model_test.cpp  pdevs_coupled_of_all_atomics_test.cpp  pdevs_coupled_of_all_coupleds_test.cpp  pdevs_coupled_of_atomic_models.hpp  pdevs_coupled_of_mixed_models.hpp  pdevs_coupled_of_mixed_models_test.cpp  pdevs_empty_coupled_model.hpp  pdevs_empty_coupled_model_is_a_valid_model_test.cpp  pdevs_generator_atomic_check_test.cpp  pdevs_passive_atomic_check_test.cpp  pdevs_simulator_provide_types_test.cpp  pdevs_valid_atomic_check_test.cpp  pdevs_valid_atomic_with_multiple_ports_check_test.cpp
(+182 files in other folders)
